<resources>
    <string name="app_name">HabitMaster</string>
    <string name="register_title">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_username">Username</string>
    <string name="btn_register">Register</string>
    <string name="logout_title">Logout</string>
    <string name="btn_login">Login</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="account_login">Already have an account? Log in</string>
    <string name="profile_title">Profile</string>
    <string name="username_profile">Username:</string>
    <string name="level_profile">Level:</string>
    <string name="title_profile">Title:</string>
    <string name="xp_profile">XP:</string>
    <string name="badge_count_profile">Number of Badges:</string>
    <string name="coins_profile">Coins:</string>
    <string name="equipment_profile">Equipment:</string>
    <string name="qr_code_profile">QR Code:</string>
    <string name="change_password_profile">Change Password</string>
    <string name="old_password_profile">Old Password</string>
    <string name="new_password_profile">New Password</string>
    <string name="confirm_password_profile">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="badges_profile">Badges:</string>


    <string-array name="task_categories">
        <item>Zdravlje</item>
        <item>Ucenje</item>
        <item>Zabava</item>
        <item>Sredjivanje</item>
        <item>Sport</item>
    </string-array>

    <string-array name="task_difficulties">
        <item>Very easy</item>
        <item>Easy</item>
        <item>Hard</item>
        <item>Extremely hard</item>
    </string-array>

    <string-array name="task_importances">
        <item>Normal</item>
        <item>Important</item>
        <item>Extremely important</item>
        <item>Special</item>
    </string-array>

    <string-array name="task_frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="create_task">Create task</string>
    <string name="edit">Edit</string>
    <string name="statistics">Statistics</string>
    <string name="level_progress">Level Progress</string>
    <string name="next_level">Next Level:</string>
    <string name="xp">XP:</string>
    <string name="power_points">Power Points:</string>
    <string name="active_days">Active days:</string>
    <string name="current_streak">Current streak:</string>
    <string name="xp_last_7_days">XP last 7 days:</string>
    <string name="special_missions">Special Missions</string>
    <string name="started">Started:</string>
    <string name="completed">Completed:</string>
    <string name="special_missions_started">special missions started:</string>
    <string name="special_missions_completed">special missions completed:</string>
    <string name="action">Action</string>
    <string name="coins">Coins:</string>
    <string name="buy">Buy</string>
    <string name="shop">Shop</string>
    <string name="item_icon">Item icon</string>
    <string name="inventory">Inventory</string>
    <string name="inventory_menu">Inventory</string>
    <string name="activate">Activate</string>
    <string name="equipment_icon">equipment icon</string>
    <string name="active_equipment">Active Equipment</string>
    <string name="remove_active_equipment">Tap an icon to remove it from active equipment</string>
    <string name="upgrade_weapon">Upgrade Weapon</string>
    <string name="upgrade">Upgrade</string>
    <string name="weapon_icon">weapon icon</string>
    <string name="search_by_username">Search by username</string>
    <string name="reset_search">Reset search</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="follow">Follow</string>
    <string name="friend">Friend</string>
    <string name="friends">friends</string>
    <string name="no_equipment_found">No equipment found</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="create_alliance">Create alliance</string>
    <string name="alliance_name">Alliance name</string>
    <string name="invite_friends">Invite friends</string>
    <string name="close">Close</string>
    <string name="create">Create</string>
    <string name="alliance_creation">Alliance Creation</string>
    <string name="delete_alliance">Delete Alliance</string>
    <string name="members">Members:</string>
    <string name="alliance">Alliance</string>
    <string name="leader">Leader:</string>
    <string name="follow_requests">Follow Requests</string>
    <string name="profile">Profile</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="insert_text">Insert text</string>
    <string name="send">Send</string>
    <string name="chat">Chat:</string>
    <string name="boss_fight">Boss Fight</string>
    <string name="attack">Attack</string>
    <string name="start_mission">Start mission</string>
    <string name="mission_progress">Mission progress</string>
    <string name="alliance_progress">Alliance Progress</string>
    <string name="members_progress">Members Progress</string>
    <string name="more_info">More info</string>
    <string name="please_activate_equipment_before_boss_fight">Please activate equipment before boss fight</string>
</resources>