<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alliance_creation"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>

        <EditText
            android:id="@+id/etAllianceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alliance_name"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tvInviteFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friends"
            android:paddingTop="16dp"
            android:textSize="16sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFriends"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/close"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnCreate"
                android:text="@string/create"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

