<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAllianceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alliance"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/tvAllianceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="6dp"/>

        <TextView
            android:id="@+id/tvLeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDeleteAlliance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_alliance"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvMembersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMembers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Ovde ce biti chat -->

</LinearLayout>
