<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/inventoryItemIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/equipment_icon" />

    <TextView
        android:id="@+id/inventoryItemName"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingStart="8dp"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView
        android:id="@+id/durationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray" />

    <ImageButton
        android:id="@+id/upgradeButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_plus"
        android:contentDescription="@string/upgrade_weapon"
        android:scaleType="centerInside"
        android:visibility="gone"/>


    <Button
        android:id="@+id/activateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate" />

</LinearLayout>
