<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >
    
        <TextView
            android:id="@+id/inventoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp" />
    
        <TextView
            android:id="@+id/activeEquipmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_equipment"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>
    
        <TextView
            android:id="@+id/activeEquipmentHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_active_equipment"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:paddingBottom="16dp"/>
    
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="16dp"
            android:scrollbars="horizontal"/>
    
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginVertical="8dp"/>
    
        <TextView
            android:id="@+id/tvNoEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_equipment_found"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="8dp"/>
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inventoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="16dp" />
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
    
            <TextView
                android:id="@+id/coinsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coins"
                android:textSize="16sp" />
    
            <TextView
                android:id="@+id/coinsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="4dp"/>
        </LinearLayout>
    
    </LinearLayout>
</ScrollView>