<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/item_icon" />

        <TextView
            android:id="@+id/equipmentName"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/equipmentType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/coinLabel"
                android:text="@string/coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"/>

            <TextView
                android:id="@+id/equipmentCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buyButton"
        android:text="@string/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
